# scripts

./: .gitignore  README.md
backcont/: CMakeLists.txt  README.md  backcont.cpp
bold_hyb/nca_run/: extract_conductance.py  fit_current_log.py  gen_data.py  parse_steady.py  plot_current_log.p  plot_current_t.p  plot_current_voltage.p  plot_local_t.p
dmft_to_maxent/: convert_to_maxent.py
dmft_to_opendf/: parse_alps_data.py  parse_alpscore_data.py  parse_alpscore_data_2024.py
gtau_convert/: CMakeLists.txt  FindLapack.cmake  README.md
gtau_convert/example/: example.py
gtau_convert/include/: cluster.h  fouriertransform.h  green_function.h  nambu_green_function.h  types.h
gtau_convert/prog/: gtau_convert.cpp
gtau_convert/src/: auxiliaryfunctions.C  fourier_generator.C  fouriertransform.C
h5archive/: __init__.py  gf.py
h5parse/: README.md  h5parse-completion.bash  h5parse.py
h5tree/: README.md  h5tree.py
many-data/: get_data.py  mc_scan.py
mpi_sharedmem/: mpi_sharedmem.cc
python-pbs/: README.md  pbs_cori.py  pbs_edison.py  pbs_example.py  pbs_example_cori.py  pbs_example_flux.py  pbs_example_osg.py  pbs_example_stampede.py  pbs_flux.py  pbs_osg.py  pbs_stampede.py
